--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "com.esotericsoftware.spine.spine-csharp": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-csharp/src#4.2",
+    "com.esotericsoftware.spine.spine-unity": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-unity/Assets/Spine#4.2",
+    "com.esotericsoftware.spine.timeline": "file:C:/Users/hyeon2-400/Downloads/com.esotericsoftware.spine.timeline-4.2-2024-04-17/com.esotericsoftware.spine.timeline-4.2",
+    "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.31",
