워크플로우 내용수정

--- a/.github/qodo-review.yml
+++ b/.github/qodo-review.yml
@@ -3,7 +3,7 @@ name: Qodo AI Auto Review
 on:
   push:
     branches:
-      - main
+      - develop   # develop 브랜치에 push될 때 실행됨
 
 jobs:
   qodo-review:
