--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,18 @@
-name: DeepSeek Auto Code Review
+name: Gemini Auto Code Review (Korean)
 
 on:
   push:
     branches:
       - develop
-      - master
       - main
+      - master
 
 jobs:
   review:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Generate diff
@@ -23,23 +23,19 @@ jobs:
           echo "--- Generated diff ---"
           cat changes.patch || echo "No diff found"
 
-      - name: Run DeepSeek Code Review
+      - name: Run Gemini Code Review
         env:
-          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          echo "Sending diff to DeepSeek..."
-          RESPONSE=$(curl -s https://api.deepseek.com/v1/chat/completions \
+          echo "Sending diff to Gemini API..."
+          RESPONSE=$(curl -s https://gemini.googleapis.com/v1/assistants:complete \
             -H "Content-Type: application/json" \
-            -H "Authorization: Bearer $DEEPSEEK_API_KEY" \
+            -H "Authorization: Bearer $GEMINI_API_KEY" \
             -d "{
-              \"model\": \"deepseek-chat\",
-              \"messages\": [
-                {\"role\": \"system\", \"content\": \"You are a senior software engineer. Provide a code review with improvements, bug fixes, and suggestions.\"},
-                {\"role\": \"user\", \"content\": \"Here is the git diff:\n$(sed 's/"/\\"/g' changes.patch)\"}
-              ],
-              \"temperature\": 0.3
+              \"model\": \"gemini-code-latest\",
+              \"instructions\": \"당신은 숙련된 소프트웨어 엔지니어입니다. 아래 코드 diff를 보고, 문제점, 개선 방법, 버그 가능성, 최적의 작성 방법 등을 **한국어로** 상세히 리뷰해 주세요.\",
+              \"input\": \"$(sed 's/"/\\"/g' changes.patch)\"
             }")
-
-          echo "DeepSeek review result:"
-          echo "$RESPONSE" > deepseek_review.json
-          cat deepseek_review.json
+          echo "Gemini 리뷰 결과:"
+          echo "$RESPONSE" > gemini_review_ko.json
+          cat gemini_review_ko.json
