--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,12 @@ jobs:
         env:
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
         run: |
+          echo "Preparing diff..."
+          # 제어문자 제거
+          DIFF=$(cat changes.patch | tr -d '\000-\037')
+          # 큰따옴표 이스케이프
+          DIFF_ESCAPED=${DIFF//\"/\\\"}
+          
           echo "Sending diff to DeepSeek API..."
           RESPONSE=$(curl -s https://api.deepseek.com/v1/chat/completions \
             -H "Content-Type: application/json" \
@@ -35,9 +41,10 @@ jobs:
               \"model\": \"deepseek-chat\",
               \"messages\": [
                 {\"role\": \"system\", \"content\": \"당신은 숙련된 소프트웨어 엔지니어입니다. 아래 코드 diff를 보고, 문제점, 개선점, 버그 가능성 등을 상세히 한국어로 리뷰해 주세요.\"},
-                {\"role\": \"user\", \"content\": \"$(sed 's/"/\\"/g' changes.patch)\"}
+                {\"role\": \"user\", \"content\": \"$DIFF_ESCAPED\"}
               ]
             }")
+          
           echo "DeepSeek 리뷰 결과:"
           echo "$RESPONSE" > deepseek_review.json
           cat deepseek_review.json
